# myjq

./: .gitignore  CMakeLists.txt  main.cpp  myjq_config.h.in
parser/: CMakeLists.txt  parser.h  parser.hpp
